Arreglando sección de cursos

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -36,3 +36,13 @@
     height: 260px;
     flex-wrap: wrap;
 }
+
+.contenidoPrincipal-cursos {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.contenidoPrincipal-cursos-link {
+    display: flex;
+    width: 23%;
+}
