--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -46,3 +46,15 @@
     display: flex;
     width: 23%;
 }
+
+/* Responsive Part*/
+
+.headerPrincipal .container {
+    flex-direction: column;
+    align-items: initial;
+    text-align: center;
+}
+
+.headerPrincipal-nav {
+    flex-direction: column;
+}
