--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -6,7 +6,7 @@
 
 .headerPrincipal-nav {
     display: flex;
-    
+
 }
 
 .rodapePrincipal-patrocinadores .container {
@@ -49,12 +49,47 @@
 
 /* Responsive Part*/
 
-.headerPrincipal .container {
-    flex-direction: column;
-    align-items: initial;
-    text-align: center;
-}
+@media (max-width:768px) {
 
-.headerPrincipal-nav {
-    flex-direction: column;
+    .headerPrincipal .container {
+        flex-direction: column;
+        align-items: initial;
+        text-align: center;
+    }
+
+    .headerPrincipal-nav {
+        flex-direction: column;
+    }
+
+    .contenidoPrincipal-cursos {
+        flex-direction: column;
+    }
+
+    .contenidoPrincipal-cursos-link {
+        width: 100%;
+    }
+
+    .rodapePrincipal-navMap-list {
+        height: auto;
+        flex-wrap: nowrap;
+    }
+
+    .rodapePrincipal-patrocinadores .container {
+        flex-direction: column;
+    }
+
+    .rodapePrincipal-contatoForm {
+        width: 100%;
+    }
+
+    .rodapePrincipal-patrocinadores-list {
+        align-items: center;
+        width: 100%;
+        margin: 0;
+    }
+
+    .rodapePrincipal-contatoForm-fieldset {
+        justify-content: center;
+    }
+
 }
