--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -47,6 +47,24 @@
     width: 23%;
 }
 
+.videoSobre .container {
+    display: flex;
+}
+
+.videoSobre-sobre {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.videoSobre-video {
+    flex-grow: 2;
+}
+
+.videoSobre-sobre-list {
+    flex-grow: 2;
+}
+
 /* Responsive Part*/
 
 @media (max-width:768px) {
