--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -59,6 +59,7 @@
 
 .videoSobre-video {
     flex-grow: 2;
+    flex-shrink: 2;
 }
 
 .videoSobre-sobre-list {
@@ -112,5 +113,9 @@
 
     .headerPrincipal-nav-link-app {
         order: -1;
+    }
+
+    .videoSobre .container {
+        flex-direction: column;
     }
 }
